# poetry-caching

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: backend-ci.yaml  ci.yaml  docker-ci.yaml
demos/: chatgpt_demo.ipynb  chatgpt_demo_old.ipynb  decoding_trust_prompts.csv  decoding_trust_prompts_with_yes_no_replies.csv  discrimination_score.py  readme.md  referee_models.ipynb  safety_bench_dataset_formatting.ipynb  safety_bench_demo.ipynb
demos/decoding_trust/adv_demonstrations/: backdoor.ipynb  counterfactual.ipynb  readme.md
demos/decoding_trust/adversarial_robustness/: advglue_plus_plus_rte.csv  decoding_trust_adversarial_robustness_demo.ipynb
demos/decoding_trust/machine_ethics/: transformed_cm_test.csv  (+4 more)
demos/godot/: request_example_validaitor.py  text_generation.py
flask-app/: pyproject.toml
flask-app/flask_app/: __init__.py
flask-app/tests/: test_app.py
front-end/: package-lock.json  package.json
frontend/: .dockerignore  .env.production.local  .eslintrc.json  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/app/: layout.tsx  not-found.tsx  page.tsx
frontend/enum/: api_providers.ts  groups.ts  invitation.ts  metrics.ts  test.ts
frontend/hooks/: use-login.ts  use-register.ts  use-reset-password-confirm.ts  use-reset-password.ts  use-verify.ts
frontend/redux/: hooks.ts  localStorage.tsx  store.ts
frontend/types/: collection.ts  llmApi.ts  llmApiProvider.ts  metrics.ts  organization.ts  project.ts  user.ts  validaitorTests.ts
frontend/utils/: format.ts
(+729 files in other folders)
