[tool.poetry]
name = "flask-app"
version = "0.1.0"
description = ""
authors = ["Dhanunjaya Elluri <dhanunjayet@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
flask-testing = "^0.8.1"
black = "^24.1.1"
ruff = "^0.2.1"
isort = "^5.13.2"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
